@@ -7,6 +7,7 @@ Version 0.6.0~dev
 	* Update ffmpeg worker API.
 	* Make ffmpeg worker override output files by default.
 	* Add set_timecode method to ffmpeg worker.
+	* Support demuxing in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
